--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
-    }
-  }
+    "baseUrl": ".",
+    "paths": { "@/*": ["*"] },
+    "checkJs": false,
+    "types": []
+  },
+  "typeAcquisition": { "enable": false },
+  "include": ["next-env.d.ts", "**/*.js", "**/*.jsx"],
+  "exclude": ["node_modules", ".next"]
 }
